# Contact-line-subgrid-modeling

./: .gitignore  CLAUDE.md  CMakeLists.txt  GLE_continuation_arclength.py  GLE_continuation_hybrid.py  GLE_continuation_simple.py  GLE_continuation_v0.py  GLE_continuation_v4.5.py  GLE_continuation_v4.py  GLE_criticalCa.py  GLE_criticalCa_advanced.py  GLE_critical_ca_advanced.py  GLE_solver-GSL.c  GLE_solver-SUNDIALS.c  GLE_solver.c  GLE_solver.py  GLE_solver_run  GLE_solver_v2.py  LE_solver.py  Makefile  README.md  README_C_Implementation.md  README_continuation.md  README_continuation_v4.md  compare_results.py  contactline.c  csv_output.c  gle_math.c  gle_solver_wrapper.c  gradient_descent.c  huh_scriven_velocity.py  main.c  pytest.ini  requirements-python.txt  shooting_method.c  test_continuation_v4.py
.claude/: plan-of-action.md
include/: csv_output.h  gle_solver.h
output/: GLE_profiles.csv  bifurcation_data_arclength.txt  bifurcation_data_extended.txt  delta_X_cl_vs_Ca.txt  pyGLE_criticalCa-profiles.csv  pyGLE_criticalCa.csv  pyGLE_criticalCa_advanced-profiles.csv  pyGLE_criticalCa_advanced.csv  pyGLE_solver-profiles.csv  simple_continuation_mu0.0001_lambda0.0001.csv
py-test/: run_tests.sh  test_GLE_solver.py  test_integration.py
src/: GLE_solver-SUNDIALS.c  csv_output.c  gle_math.c  main.c
src-local/: GLE_solver-GSL.c  GLE_solver-GSL.h  __init__.py  ca_continuation_utils.py  find_x0_utils.py  gle_io.c  gle_io.h  gle_math.h  gle_ode_systems.c  gle_ode_systems.h  gle_optimization.c  gle_optimization.h  gle_physics.c  gle_physics.h  gle_shooting.c  gle_shooting.h  gle_solver.h  gle_utils.py  gradient_descent.h  shooting_method.h  solution_types.py  solver_utils.py
test/: Minkush data.csv  README.md  run_c_tests.sh  run_tests.sh  test_GLE_solver-GSL.c  test_GLE_solver.py  test_GLE_solver_c.py  test_LE_solver.py  test_gle_solver_gsl  test_huh_scriven_velocity.py  test_integration.py  test_phase2_debug.py  test_theta_min_continuation.py  test_x0_definition.py  validate_LE_solver.py
test/c_tests/: test_gle_math_c.c  test_gle_solver_c.c
test_c_output/: test_complete_solution.csv  test_h_profile.csv  test_theta_profile.csv
